# slow-api

./: .pre-commit-config.yaml  README.md  bump_version.py  check_api_version.py  setup.cfg  version_bump.py
.github/workflows/: issue_branch.yaml  lint.yaml
api/: pyproject.toml
api/djongo/: asgi.py  settings.py  urls.py
djongo/: manage.py  pyproject.toml
djongo/djongo/: settings.py  wsgi.py
