[tool.poetry]
name = "slow-api"
version = "0.1.001"
description = "banger"
authors = ["derpinskV2 <kderpinski@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
uvicorn = "^0.33.0"
django-ninja = "^1.3.0"
django-ninja-extra = "^0.21.8"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
