[tool.poetry]
name = "slow-api"
version = "0.1.002"
description = "banger"
authors = ["derpinskV2 <kderpinski@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = {extras = ["d"], version = "^24.10.0"}
django = "^5.1.4"
django-environ = "^0.11.2"
django-ninja = "^1.3.0"
django-ninja-extra = "^0.21.8"
pre-commit = "^4.0.1"
setuptools = "^75.6.0"
toml = "^0.10.2"
urllib3 = "^2.2.3"
uvicorn = "^0.34.0"
wheel = "^0.45.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
